<resources>
    <string name="app_name">Out Of A Hat</string>
    <string name="emptyListText">Add Names</string>
    <string name="nameHint">Name</string>
    <string name="drawNameText">Draw Name</string>
    <string name="addNameText">Add To List</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="splash_screen_text">Out Of A Hat</string>
    <string name="checkOutOthersText">Check out these other apps!</string>
</resources>
