<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chris.atchley.outofahat.MainActivity"
    android:background="#0af5da">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/addNamEditText"
                android:hint="@string/nameHint"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addNameText"
                android:id="@+id/addNameButton"
                android:layout_below="@+id/addNamEditText"
                android:elegantTextHeight="false"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/tophat"
                android:baselineAlignBottom="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_below="@+id/addNameButton"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/drawnNameTextView"
                android:layout_gravity="center_vertical"
                android:layout_alignTop="@+id/imageView"
                android:textColor="#f01212"
                android:textSize="20sp"
                android:capitalize="characters"
                android:gravity="center_horizontal"
                android:layout_marginTop="70dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drawNameText"
                android:id="@+id/drawNameButton"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/imageView"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete Chosen Name"
                android:id="@+id/deleteChosenCheckBox"
                android:layout_below="@+id/drawNameButton"
                android:layout_centerHorizontal="true"
                android:checked="true"
                android:textSize="10sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/myListView"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="80dp"
                android:dividerHeight="10sp"
                android:divider="#FF0AF5DA"
                android:contextClickable="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptyListText"
                android:id="@android:id/empty"
                android:layout_gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="958dp"/>
        </RelativeLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
